QNX: Fix clangd code model with Clang 19

Amends 5a6c625c5e46aef442689a2bc691679da7a562db

clang 19 has an issue with the target triple 'unknown-qnx-gnu'.

I have taken the approach from the Android toolchain also for QNX
toolchain. Match the targetABI with a target triple.

Fixes: QTCREATORBUG-32529
Change-Id: I7bd961d7ff66c7c655c5de06a76978b4718c9c70
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>